--- a/index.html
+++ b/index.html
@@ -7,27 +7,18 @@
     <title>Posicionamento</title>
 </head>
 <body>
-    <header class="topo">
-        <div class="job"><h1>Job</h1></div>
-        <div>
-             <span>
-                <h1>Opportunity</h1>
-             </span>
-            <h2>Este Site e Destinado aos Profissionais de TI</h2>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="home">Home</a></li>
-                <li><a href="contato">Contato</a></li>
-                <li><a href="login">Login</a></li>
-                <li><a href="empresas">Empresas</a></li>
-                <li><a href="cadastro">Cadastro</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex cum deleniti libero voluptates commodi dignissimos praesentium blanditiis perspiciatis sed harum, culpa eligendi autem delectus numquam, non ullam? Aut, quos illo Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam similique fugiat vel. Iure fuga sunt cupiditate maiores minima? Ipsa rem quas repellendus deleniti magnam reprehenderit nobis consequuntur amet eos quasi.</p>
-    </main>
-    
+    <div class="bloco">
+
+    </div>
+    <div class="bloco">
+
+    </div>
+    <div class="bloco">
+
+    </div>
+    <div class="bloco">
+
+    </div>
+  
 </body>
 </html>
