--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <title>Posicionamento</title>
 </head>
 <body>
-    <div class="bloco">
+    <div class="bloco" id="q1">
 
     </div>
-    <div class="bloco">
+    <div class="bloco" id="q2">
 
     </div>
-    <div class="bloco">
+    <div class="bloco" id="q3">
 
     </div>
-    <div class="bloco">
+    <div class="bloco" id="q4">
 
     </div>
   
